--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -115,20 +115,20 @@
         <table class="table table-striped">
           <thead>
             <tr>
-              <th>Nome</th>
-              <th>Descrizione</th>
-              <th>Quantità</th>
-              <th>Prezzo Unitario</th>
-              <th>Totale</th>
+              <th class="titoloColonna">Nome</th>
+              <th class="titoloColonna">Descrizione</th>
+              <th class="titoloColonna">Quantità</th>
+              <th class="titoloColonna">Prezzo Unitario</th>
+              <th class="titoloColonna">Totale</th>
             </tr>
           </thead>
           <tbody>
             <tr *ngFor="let prodotto of prodottiSelezionati">
-              <td>{{ prodotto.articolo.nome }}</td>
-              <td>{{ prodotto.articolo.tipologia }}</td>
-              <td>{{ prodotto.quantita }}</td>
-              <td>€{{ prodotto.articolo.prezzo.toFixed(2) }}</td>
-              <td>€{{ (prodotto.articolo.prezzo * prodotto.quantita).toFixed(2) }}</td>
+              <td class="testoColonna">{{ prodotto.articolo.nome }}</td>
+              <td class="testoColonna">{{ prodotto.articolo.tipologia }}</td>
+              <td class="testoColonna">{{ prodotto.quantita }}</td>
+              <td class="testoColonna">€{{ prodotto.articolo.prezzo.toFixed(2) }}</td>
+              <td class="testoColonna">€{{ (prodotto.articolo.prezzo * prodotto.quantita).toFixed(2) }}</td>
             </tr>
           </tbody>
         </table>
