--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -42,7 +42,7 @@
   display: flex;
   position: absolute;
   right: 0;
-  margin-right: 1vw;
+  margin-right: 27vw;
 }
 
 .spazio {
@@ -119,7 +119,7 @@
   display: flex;
   font-weight: bold;
   margin-bottom: 1.099vh;
-  overflow-x: auto;
+  overflow-x: scroll;
   /* Permette lo scroll orizzontale per le intestazioni */
   white-space: nowrap;
   /* Impedisce agli elementi di andare a capo */
@@ -205,18 +205,44 @@
   font-size: 10px;
 }
 
+.contenitoreBottoni {
+  display: flex;
+  align-items: center;
+}
+
+.contButton {
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+}
+
+.contButton2 {
+  margin-left: 10px;
+}
+
+
+.btn2 {
+  width: 100px;
+  align-items: center;
+  display: flex;
+  justify-content: center;
+  height: 55px;
+  margin-bottom: 3px;
+}
+
 
 /*----------------------*/
 .calcolatrice-container {
   border: 1px solid #ccc;
   padding: 10px;
   border-radius: 5px;
-  width: 600px;
-  /* Maggiore larghezza per una visualizzazione più ampia */
-  height: 700px;
-  /* Altezza fissa per l'intera calcolatrice */
+  width: 400px;
+  height: auto;
   display: flex;
   flex-direction: column;
+  z-index: 9999;
+  margin-top: -8.2vh;
+  background-color: rgb(161, 161, 161);
 }
 
 .display {
@@ -230,7 +256,7 @@
   /* Aumenta la dimensione del font per una visualizzazione migliore */
   overflow-y: auto;
   /* Abilita lo scroll verticale */
-  max-height: 400px;
+  height: 250px;
   /* Imposta un'altezza massima più grande per il display */
 }
 
@@ -274,22 +300,29 @@
   font-weight: bold;
 }
 
+
 .buttons {
-  display: grid;
-  grid-template-columns: repeat(4, 1fr);
-  gap: 5px;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 10px;
+  /* Spazio tra i bottoni */
+  max-width: 800px;
+  /* Larghezza massima per le sezioni */
 }
 
 .btn {
-  padding: 12px;
-  /* Maggiore padding per i bottoni */
+  flex: 1 1 calc(25% - 10px);
+  /* Larghezza fissa per ogni bottone (25% della riga) */
+  padding: 15px;
   border: 1px solid #ddd;
   border-radius: 5px;
   background-color: #f0f0f0;
   cursor: pointer;
   font-size: 1.2em;
-  /* Maggiore dimensione del font per i bottoni */
+  box-sizing: border-box;
+  text-align: center;
 }
+
 
 .btn:active {
   background-color: #e0e0e0;
