--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -221,7 +221,7 @@
   align-items: center;
   display: flex;
   justify-content: center;
-  height: 55px;
+  height: 47px !important;
   margin-bottom: 3px;
 }
 
@@ -299,15 +299,12 @@
 .buttons {
   display: flex;
   flex-wrap: wrap;
-  gap: 10px;
-  /* Spazio tra i bottoni */
+  /* gap: 10px; */
   max-width: 800px;
-  /* Larghezza massima per le sezioni */
 }
 
 .btn {
   flex: 1 1 calc(25% - 10px);
-  /* Larghezza fissa per ogni bottone (25% della riga) */
   padding: 15px;
   border: 1px solid #000000;
   border-radius: 5px;
@@ -316,6 +313,10 @@
   font-size: 1.2em;
   box-sizing: border-box;
   text-align: center;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
 }
 
 
@@ -341,20 +342,37 @@
   background-color: #c82333;
 }
 
-.pagamento {
-  margin-top: 10px;
+.contPagamento{
   display: flex;
+}
+
+.pagamento {
+  display: flex;
+  align-items: start;
   flex-direction: column;
-  align-items: center;
 }
 
 #pagaContanti {
-  margin-bottom: 10px;
+  margin-bottom: 5px;
+}
+
+
+.Btnpagamento{
+  height: 50px !important;
+  width: auto !important;
+  display: flex;
+  align-items: center;
+  justify-self: center;
+  background-color: #EF8000;
+  color: white;
+  border: none;
+  margin-left: 10px;
+  margin-top: 10px;
+
 }
 
 .resto-display {
-  margin-top: 10px;
-  font-weight: bold;
+  font-weight: bolder;
 }
 
 .buttonPers {
