--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -116,7 +116,7 @@
                 <th class="titoloColonna">Nome</th>
                 <th class="titoloColonna">Descrizione</th>
                 <th class="titoloColonna">Quantità</th>
-                <th class="titoloColonna">Prezzo Unitario</th>
+                <th class="titoloColonna">Prezzo</th>
                 <th class="titoloColonna">Totale</th>
                 <th class="titoloColonna">Azione</th> <!-- Nuova colonna per il pulsante di rimozione -->
               </tr>
@@ -129,7 +129,7 @@
                 <td class="testoColonna">€{{ prodotto.articolo.prezzo.toFixed(2) }}</td>
                 <td class="testoColonna">€{{ (prodotto.articolo.prezzo * prodotto.quantita).toFixed(2) }}</td>
                 <td class="testoColonna">
-                  <button class="btn btn-danger buttonPers" (click)="rimuoviProdotto(i)">Rimuovi</button>
+                  <button class="btn btn-danger buttonPers" (click)="rimuoviProdotto(i)"><i class="fa-solid fa-trash"></i></button>
                 </td>
               </tr>
             </tbody>
