--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -49,12 +49,6 @@
   margin-left: 0.5vw;
 }
 
-.myForm {
-  width: 7vw;
-  height: 4vh;
-  border: solid 1px black;
-}
-
 .formPers2 {
   font-weight: bold;
   width: 10vw;
@@ -208,8 +202,6 @@ tbody{
 
 }
 
-
-
 td{
   border: solid 1px black;
 
@@ -251,6 +243,32 @@ td{
   justify-content: center;
   height: 47px !important;
   margin-bottom: 3px;
+}
+
+.form-group{
+  margin-bottom: 5px;
+}
+
+.mySelect{
+  height: 3.5vh;
+  width: 7vw;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border-radius: 5px;
+  font-size: 14px;
+  text-align: center;
+  padding-left: 15px;
+}
+
+
+.myForm {
+  width: 7vw;
+  height: 3.5vh;
+  border: solid 1px black;
+  border-radius: 5px;
+  font-size: 14px;
+  text-align: center;
 }
 
 
