--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.html
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.html
@@ -141,6 +141,30 @@
       <!-- Bottoni della calcolatrice -->
       <div class="row">
         <div class="col">
+          <div class="buttons d-flex justify-content-between">
+            <button class="btn">Quantità</button>
+            <button class="btn">Codice</button>
+            <div class="form-group">
+              <input class="myForm" value="Listino" readonly />
+              <select id="listino" class=" mySelect">
+                <option value="option1">1</option>
+                <option value="option2">2</option>
+                <option value="option3">3</option>
+                <option value="option4">4</option>
+                <option value="option5">5</option>
+                <option value="option6">6</option>
+              </select>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
+
+
+      <div class="row">
+        <div class="col">
           <div class="contButton">
             <div class="buttons">
               <!-- Prima sezione di pulsanti numerici -->
@@ -194,7 +218,6 @@
         <button class="btn Btnpagamento" (click)="calcolaResto()">Calcola Resto</button>
       </div>
 
-      <!-- Display del resto -->
       <div class="resto-display">
         Resto: <span id="resto">{{ resto !== null ? resto.toFixed(2) : '0.00' }}</span>
       </div>
