--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -313,6 +313,7 @@ td{
 
 .totale-prodotti {
   font-weight: bolder;
+  font-size: 18px;
 }
 
 .prodotti-selezionati {
@@ -424,6 +425,7 @@ td{
 
 .resto-display {
   font-weight: bolder;
+  font-size: 18px;
 }
 
 .buttonPers {
