--- a/src/app/pagine/vendita/touch-screen/touch-screen.component.css
+++ b/src/app/pagine/vendita/touch-screen/touch-screen.component.css
@@ -442,6 +442,18 @@ td{
   font-size: 1vw;
 }
 
+.keyboard-input {
+  width: 100%;
+  padding: 10px;
+  font-size: 1.2em;
+  border: 1px solid #ccc;
+  margin-bottom: 10px;
+  background: #f9f9f9;
+  box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
+  text-align: right;
+  color: #333;
+}
+
 .keyboard {
   display: flex;
   flex-direction: column;
@@ -460,7 +472,6 @@ td{
   justify-content: space-between;
 }
 
-
 .keyboard button {
   flex: 1;
   padding: 10px;
@@ -468,8 +479,9 @@ td{
   border: 1px solid #ccc;
   background: #f1f1f1;
   cursor: pointer;
+  font-size: 1.2em;
+  color: #333;
 }
-
 
 .keyboard button:hover {
   background: #e1e1e1;
